create jwtTokenProvider, and remove firebase configuration

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 # Set the application base context path
 server.servlet.context-path=/api
+
 spring.devtools.livereload.enabled=true
 
 ## Spring DATASOURCE (DataSourceAutoConfiguration & DataSourceProperties)
@@ -8,10 +9,16 @@ spring.datasource.username= user_qma
 spring.datasource.password= user_pass
 
 ## Hibernate Properties
-
 # The SQL dialect makes Hibernate generate better SQL for the chosen database
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
 spring.jpa.hibernate.ddl-auto = update
 
 ## Hibernate Logging
 logging.level.org.hibernate.SQL= DEBUG
+
+## Jwt properties
+app.jwtSecret = JWTSuperSecretKey
+app.jwtExpirationInMs = 604800000
+
+## Student default property
+student.initialRating = 5
