--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -48,6 +48,11 @@
 			<artifactId>spring-boot-devtools</artifactId>
 			<scope>runtime</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.modelmapper</groupId>
+			<artifactId>modelmapper</artifactId>
+			<version>2.0.0</version>
+		</dependency>
 
 		<!-- For Working with Json Web Tokens (JWT) -->
 		<dependency>
