increase the token expire time and add this property to the signin dto

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -18,3 +18,5 @@ logging.level.org.hibernate.SQL= DEBUG
 
 ## Jwt properties
 app.jwtSecret = JWTSuperSecretKey
+# Token expire time in seconds
+app.tokenExpireTime = 18000
